# pkit-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: install.ps1  install.sh
src/: cli.rs  commands.rs  filesystem.rs  formatter.rs  helper.rs  lib.rs  main.rs  parser.rs  request.rs
src/api/: mod.rs  request.rs
src/commands/: default.rs  install.rs  list.rs  path.rs  switch.rs  uninstall.rs
src/filesystem/: config.rs
src/filesystem/path/: common.rs  mod.rs  unix.rs  windows.rs
src/parser/: mod.rs
