[package]
name = "pkit"
version = "0.0.2"
authors = ["Sir Blob <dev@sirblob.co>"]
edition = "2024"

[dependencies]
home = "0.5.9"
json = "0.12.4"
reqwest = { version = "0.12.14", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
zip = "2.4.1"
flate2 = "1.1.0"
tar = "0.4.44"
clap = { version = "4.5.21", features = ["derive", "color"] }